Fix layout bugs
Former-commit-id: 25dfa5e3084823ac830309b05c4cc4d5c43ef90e [formerly 7fe3fab6ea80fcb833683115d71c9ac7cf24b1d6] [formerly 819f43e4803a00ecc4b9f8a4b5fe6c196e6b3fd4]
Former-commit-id: f2bea1b405ec2bc57950ad81785654a9b1c4a7c3
Former-commit-id: 0b178cce8b286ec6a2a26a98a551ee45a259a3b2

--- a/commander/public/css/layout.css
+++ b/commander/public/css/layout.css
@@ -12,14 +12,6 @@ body {
   border-bottom: 1px solid #eee;
 }
 
-.main {
-  padding: 20px;
-}
-
-.main .page-header {
-  margin-top: 0;
-}
-
 .row{
     margin-left:0px;
     margin-right:0px;
@@ -38,7 +30,7 @@ body {
     background: #222;
     position: fixed;
     height: 100%;
-    z-index: 10000;
+    z-index: 10;
     transition: all .4s ease 0s;
 }
 
@@ -165,9 +157,3 @@ body {
 	}
 }
 
-@media (min-width: 768px) {
-  .main {
-    padding-right: 40px;
-    padding-left: 40px;
-  }
-}
